--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<h1>Github repository/data will be made available and updated here.</h1>
+<h1>Github repository/data/code will be made available and updated here.</h1>
