--- a/data/sample/index.html
+++ b/data/sample/index.html
@@ -1,6 +1,6 @@
 <h1>Sample data</h1>
 <p>
-The data is encoded using  (https://ncit.nci.nih.gov/ncitbrowser/pages/home.jsf) where possible (with mappings possible to others, such as SNOMED, etc.).
+The data is encoded using <a href=https://ncit.nci.nih.gov/ncitbrowser/pages/home.jsf>NCIt</a> where possible (with mappings possible to others, such as SNOMED, etc.).
 For the dataset 1 (eligibility data) format, an example is for HIV: <a href=dataset1_example_struct_elig_criteria_hiv_format.xlsx>dataset1_example_struct_elig_criteria_hiv_format.xlsx</a>
 For dataset 2 (participant data) format, please see <a href=dataset2_example_participant_format.xlsx>dataset2_example_participant_format.xlsx</a>
 
