--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<h1>Github repository/data/code will be made available and updated <a href=https://tophealth.github.io/data/sample/>here</a>.</h1>
+<h1>Github repository/data/code will be made available and updated <a href=https://tophealth.github.io/data/>here</a>.</h1>
